# sparki-seo-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.example.yaml
configs/prompts/: blog_write.txt  qc_check_unified.txt  video_analysis.txt
docs/: 00_RawIdea.md  DevGuide.md  FrontendDevPlan.md  IntegrationPlan.md  InterfaceContracts.md  MasterAgentDesign.md  PRD.md  VisualizationDesign.md
frontend/: v1_task_submit.html  v2_with_logs.html  v3_with_sse.html  v4_with_chat.html
src/: config.py
src/agents/: __init__.py  pipeline.py  state_schema.py
src/agents/master/: __init__.py  api_server.py  cli.py  contentful_publisher.py  conversation.py  intent_router.py  llm_client.py  memory.py  models.py  pipeline_pool.py  project_manager.py  sparki_gui.html  sparki_simple.html  sparki_tui.py  test_components.py
src/agents/nodes/: __init__.py  article_rewriter.py  article_writer.py  metadata_scraper.py  qc_checker.py  video_analyzer.py  video_downloader.py
src/storage/: __init__.py  storage_paths.py
