[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparki-seo-agent"
version = "2.0.0"
description = "Agentic Video-to-Blog Pipeline with AI-powered SEO optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sparki Team", email = "sparki@example.com"}
]
keywords = ["seo", "blog", "video", "ai", "tiktok", "instagram", "contentful", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "yt-dlp>=2024.0.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.40.0",
    "contentful>=2.0.0",
    "langgraph>=0.2.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
sparki = "src.agents.master.cli:main"
sparki-api = "src.agents.master.api_server:main"
sparki-tui = "src.agents.master.sparki_tui:run_tui"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"